# rosetta-lang

./: .dockerignore  .gitignore  CONTRIBUTING.rst  Creating language.xhtml  Pipfile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  tox-suite.yml
docs/: conf.py  index.rst
src/rosetta_lang/: __main__.py  misc_enums.py  parser.py  rosetta.lark
src/rosetta_lang/parsing/: lexer.py  parser.py  token.py
src/rosetta_lang/samples/: base_language.roset  just_function.roset  just_namespace.roset  just_variable.roset  namespace_with_variable.roset
src/rosetta_lang/transformers/: blocks.py  functions.py  main.py  maths.py  types.py  values.py  variables.py
tests/: conftest.py  test_base_types.py  test_parsing.py  test_transform.py  testing.log.rst
tests/resources/language_files/: complete_language_test.roset  function_test.roset  indexing_test.roset  variable_in_class.roset  variable_test.roset
tools/reverse_lexer/: __main__.py
uml/: ast.puml  customized.puml  styling.puml
