[tool.poetry]
name = "rosetta-lang"
version = "0.0.1"
authors = ["Leandro Benedet Garcia <cerberus1746@gmail.com>"]
description = ""


[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
